# ytbpy

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/: __init__.py  channel.py  playlist.py  video.py
ytbpy/: __init__.py  search.py  utils.py
